--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         </nav>
     </header>
     <section>
-        <div class="logo"></div>
         <div class="logo">
             <img src="	https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
         </div>
@@ -29,11 +28,11 @@
             <img class="icons vs-icon" src="./assets/svgs/vs-icon.svg" alt="vs-icon">
             <img class=" icons camera-img" src="./assets/svgs/camera-img.svg" alt="">
             <div class="button-groups">
-              <button>Search on Google</button>
-              <button>I'm lucky</button>
+              <button>Search in Google</button>
+              <button>I'm feeling lucky</button>
             </div>
           </form>
-        <span>Google suggestion : <a href="#">русский</a> <a href="#">English</a></span>   
+        <span>Google offered in : <a href="#">русский</a> <a href="#">English</a></span>   
     </section>
       <footer>
         <h4 class="location">Azerbaijan</h4>
