--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     
-    <title>Document</title>
+    <title>g</title>
 </head>
 <body>
     <div class="container">
@@ -41,7 +41,7 @@
                 <a href="#">About Google</a>
                 <a href="#">Advertising</a>
                 <a href="#"> Business</a>
-                <a href="#">How the search works</a>
+                <a href="#" >How the search works</a>
             </div>
             <div class="right-side">
                 <a href="#">Privacy</a>
