--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/svgs/google-favicon" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/style.css">
     
@@ -26,6 +27,7 @@
           <form action="">
             <img class="icons search-icon" src="./assets/svgs/search-icon.svg" alt="search-icon">
             <input type="text">
+            <i class="fa-solid fa-xmark "></i>
             <img class="icons vs-icon" src="./assets/svgs/vs-icon.svg" alt="vs-icon">
             <img class=" icons camera-img" src="./assets/svgs/camera-img.svg" alt="">
             <div class="button-groups">
@@ -52,5 +54,15 @@
         </div>
       </footer>  
     </div>    
+
+
+
+
+
+
+
+
+
+    <script src="./script.js"></script>
 </body>
 </html>
