--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img class="icons vs-icon" src="./assets/svgs/vs-icon.svg" alt="vs-icon">
             <img class=" icons camera-img" src="./assets/svgs/camera-img.svg" alt="">
             <div class="button-groups">
-              <button>Search in Google</button>
+              <button id="searchbtn">Search in Google</button>
               <button>I'm feeling lucky</button>
             </div>
           </form>
